--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,8 @@ services:
     # HotelBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    
+    HotelBundle\Controller\ExceptionController:
+        public: true
+        arguments:
+            $debug: '%kernel.debug%'
